Accelerated prime factorization code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,10 @@ import(stats,graphics,grDevices,utils,methods)
 useDynLib(spatstat.utils, 
 "drevcumsum",
 "fastinterv",
-"irevcumsum")
+"irevcumsum",
+"nndist2segs",
+"prdist2segs",
+"primefax")
 
 # .................................................. 
 # Automatically-generated list of documented objects 
@@ -42,6 +45,10 @@ export("check.nvector")
 export("check.range")
 export("commasep")
 export("complaining")
+export("distpl")               
+export("distppl")
+export("distppll")
+export("distppllmin")
 export("dont.complain.about")
 export("dotexpr.to.call")
 export("dropifsingle")
@@ -49,6 +56,7 @@ export("dround")
 export("ensure2vector")
 export("ensure3Darray")
 export("equispaced")          
+export("eratosthenes")
 export("evenly.spaced")
 export("exceedsMaxArraySize")
 export("fakecallstring")
@@ -63,6 +71,7 @@ export("forbidNA")
 export("geomseq")
 export("getdataobjects")
 export("good.names")
+export("greatest.common.divisor")
 export("gsubdot")
 export("ifelse0NA")
 export("ifelse1NA")
@@ -78,6 +87,8 @@ export("inside.range")
 export("intersect.ranges")     
 export("is.blank")
 export("is.parseable")
+export("is.prime")
+export("least.common.multiple")
 export("lty2char")
 export("make.parseable")
 export("mapstrings")
@@ -104,8 +115,11 @@ export("pasteN")
 export("prange")
 export("prettydiscrete")
 export("prettyinside")
+export("primefactors")
+export("primesbelow")
 export("prolongseq")
 export("ratiotweak")
+export("relatively.prime")
 export("revcumsum")
 export("romansort")
 export("samefunction")
