Added splat() and other text utilities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,8 @@ export("check.named.thing")
 export("check.named.vector")
 export("check.nvector")
 export("check.range")
+export("choptext")
+export("choptextline")
 export("commasep")
 export("complaining")
 export("distpl")               
@@ -59,6 +61,7 @@ export("equispaced")
 export("eratosthenes")
 export("evenly.spaced")
 export("exceedsMaxArraySize")
+export("exhibitStringList")
 export("fakecallstring")
 export("fastFindInterval")
 export("fave.order")
@@ -111,6 +114,7 @@ export("ordinalsuffix")
 export("padtowidth")
 export("paren")
 export("paste.expr")
+export("pasteFormula")
 export("pasteN")
 export("prange")
 export("prettydiscrete")
@@ -127,6 +131,7 @@ export("sensiblevarname")
 export("short.deparse")
 export("simplenumber")              
 export("singlestring")              
+export("splat")
 export("startinrange")
 export("strsplitretain")
 export("substringcount")
