--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spatstat.utils
-Version: 1.0-3
-Date: 2016-12-31
-Title: EXPERIMENTAL
+Version: 1.0-4
+Date: 2017-01-01
+Title: EXPERIMENTAL Subset of Spatstat
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
        	            email = "Adrian.Baddeley@curtin.edu.au"),
