--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,8 @@ export("distpl")
 export("distppl")
 export("distppll")
 export("distppllmin")
+export("do.call.matched")
+export("do.call.without")
 export("dont.complain.about")
 export("dotexpr.to.call")
 export("dropifsingle")
@@ -62,6 +64,7 @@ export("eratosthenes")
 export("evenly.spaced")
 export("exceedsMaxArraySize")
 export("exhibitStringList")
+export("explain.ifnot")
 export("fakecallstring")
 export("fastFindInterval")
 export("fave.order")
@@ -74,6 +77,7 @@ export("forbidNA")
 export("geomseq")
 export("getdataobjects")
 export("good.names")
+export("graphicsPars")            
 export("greatest.common.divisor")
 export("gsubdot")
 export("ifelse0NA")
@@ -113,6 +117,7 @@ export("ordinal")
 export("ordinalsuffix")
 export("padtowidth")
 export("paren")
+export("passthrough")
 export("paste.expr")
 export("pasteFormula")
 export("pasteN")
@@ -124,6 +129,8 @@ export("primesbelow")
 export("prolongseq")
 export("ratiotweak")
 export("relatively.prime")
+export("resolve.1.default")
+export("resolve.defaults")
 export("revcumsum")
 export("romansort")
 export("samefunction")
