Added formula manipulation code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export("assignDFcolumn")
 export("badprobability")
 export("blockdiagarray")
 export("blockdiagmatrix")
+export("can.be.formula")
 export("cat.factor")
 export("check.1.integer")
 export("check.1.real")
@@ -64,6 +65,7 @@ export("eratosthenes")
 export("evenly.spaced")
 export("exceedsMaxArraySize")
 export("exhibitStringList")
+export("expand.polynom")
 export("explain.ifnot")
 export("fakecallstring")
 export("fastFindInterval")
@@ -80,6 +82,7 @@ export("good.names")
 export("graphicsPars")            
 export("greatest.common.divisor")
 export("gsubdot")
+export("identical.formulae")
 export("ifelse0NA")
 export("ifelse1NA")
 export("ifelseAB")
@@ -96,6 +99,7 @@ export("is.blank")
 export("is.parseable")
 export("is.prime")
 export("least.common.multiple")
+export("lhs.of.formula")
 export("lty2char")
 export("make.parseable")
 export("mapstrings")
@@ -111,6 +115,7 @@ export("natozero")
 export("niceround")
 export("numalign")
 export("nzpaste")
+export("offsetsinformula")
 export("orderstats")
 export("orderwhich")
 export("ordinal")
@@ -132,6 +137,7 @@ export("relatively.prime")
 export("resolve.1.default")
 export("resolve.defaults")
 export("revcumsum")
+export("rhs.of.formula")
 export("romansort")
 export("samefunction")
 export("sensiblevarname")
@@ -142,12 +148,15 @@ export("splat")
 export("startinrange")
 export("strsplitretain")
 export("substringcount")
+export("sympoly")
+export("termsinformula")
 export("there.is.no.try")
 export("trap.extra.arguments")
 export("truncline")
 export("unparen")
 export("uptrimat")
 export("validposint")
+export("variablesinformula")
 export("variablesintext")
 export("verbalogic")
 export("warn.ignored.args")
