Added xypolygon code and spatstatLocator

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spatstat.utils
-Version: 1.0-6
-Date: 2017-01-02
-Title: EXPERIMENTAL Subset of Spatstat
+Version: 1.0-7
+Date: 2017-01-08
+Title: EXPERIMENTAL Subset of Spatstat Utilities
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
        	            email = "Adrian.Baddeley@curtin.edu.au"),
@@ -20,4 +20,4 @@ URL: http://www.spatstat.org
 LazyData: true
 NeedsCompilation: yes
 ByteCompile: true
-BugReports: https://github.com/spatstat/spatstat/issues
+BugReports: https://github.com/spatstat/spatstat.utils/issues
