--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,21 +7,12 @@ import(stats,graphics,grDevices,utils,methods)
 
 
 
-
 # .................................................. 
-# Automatically-generated list of entry points       
+#  load dynamic library
+#      (native routines are now registered in init.c)
 # .................................................. 
 
-useDynLib(spatstat.utils, 
-"circXseg",
-"Cmatchxy",
-"drevcumsum",
-"fastinterv",
-"inxyp",
-"irevcumsum",
-"nndist2segs",
-"prdist2segs",
-"primefax")
+useDynLib(spatstat.utils, .registration=TRUE)
 
 # .................................................. 
 # Automatically-generated list of documented objects 
@@ -124,6 +115,7 @@ export("niceround")
 export("numalign")
 export("nzpaste")
 export("offsetsinformula")
+export("optimizeWithTrace")
 export("orderstats")
 export("orderwhich")
 export("ordinal")
@@ -174,6 +166,8 @@ export("variablesintext")
 export("verbalogic")
 export("verify.xypolygon")
 export("warn.ignored.args")
+export("xysegMcircle")
+export("xysegPcircle")
 export("xysegXcircle")
 
 # .......  Special cases ........... 
