Added tapplysum code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -154,6 +154,7 @@ export("startinrange")
 export("strsplitretain")
 export("substringcount")
 export("sympoly")
+export("tapplysum")
 export("termsinformula")
 export("there.is.no.try")
 export("trap.extra.arguments")
