--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spatstat.utils
-Version: 1.2-6
+Version: 1.2-8
 Date: 2017-02-15
-Title: EXPERIMENTAL subset of 'spatstat' utilities
+Title: Experimental Subset of 'spatstat' Utilities
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
        	            email = "Adrian.Baddeley@curtin.edu.au"),
