New function NNdist2segments callable by spatstat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ export("matrowany")
 export("matrowsum")
 export("natozero")
 export("niceround")
+export("NNdist2segments")
 export("numalign")
 export("nzpaste")
 export("offsetsinformula")
