Documented another function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export("distpl")
 export("distppl")
 export("distppll")
 export("distppllmin")
+export("divisors")
 export("do.call.matched")
 export("do.call.without")
 export("dont.complain.about")
