--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export("check.in.range")
 export("check.named.list")
 export("check.named.thing")
 export("check.named.vector")
+export("check.nmatrix")
 export("check.nvector")
 export("check.range")
 export("choptext")
