--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: spatstat.utils
-Version: 1.3-3
-Date: 2017-02-23
-Title: Experimental Subset of 'spatstat' Utilities
+Version: 1.4-0
+Date: 2017-03-19
+Title: Utility Functions for 'spatstat'
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
        	            email = "Adrian.Baddeley@curtin.edu.au"),
@@ -14,7 +14,8 @@ Authors@R: c(person("Adrian", "Baddeley",
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.3.0), stats, graphics, grDevices, utils, methods
 Suggests: spatstat
-Description: This is an experimental package containing a subset of 'spatstat'.
+Description: This package contains utility functions for the 'spatstat' package
+             which may also be useful for other purposes.
 License: GPL (>= 2)
 URL: http://www.spatstat.org
 LazyData: true
