--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.utils
-Version: 1.4-0
-Date: 2017-03-19
+Version: 1.4-1
+Date: 2017-03-21
 Title: Utility Functions for 'spatstat'
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -14,7 +14,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.3.0), stats, graphics, grDevices, utils, methods
 Suggests: spatstat
-Description: This package contains utility functions for the 'spatstat' package
+Description: Contains utility functions for the 'spatstat' package
              which may also be useful for other purposes.
 License: GPL (>= 2)
 URL: http://www.spatstat.org
