Native routines mapped to namespace
Native routines are now mapped to symbols in the package namespace.
Namespace symbol ‘C_foo’ corresponds to C function ‘foo’. This is
claimed to be faster.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ import(stats,graphics,grDevices,utils,methods)
 #      (native routines are now registered in init.c)
 # .................................................. 
 
-useDynLib(spatstat.utils, .registration=TRUE)
+useDynLib(spatstat.utils, .registration=TRUE, .fixes="C_")
 
 # .................................................. 
 # Automatically-generated list of documented objects 
