--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,9 +74,10 @@ export("findfirstfactor")
 export("firstfactor")
 export("flat.deparse")
 export("fontify")
-export("forbidNA") 
+export("forbidNA")
 export("geomseq")
 export("getdataobjects")
+export("getSpatstatLocatorQueue")
 export("good.names")
 export("graphicsPars")            
 export("greatest.common.divisor")
@@ -140,6 +141,8 @@ export("prettyinside")
 export("primefactors")
 export("primesbelow")
 export("prolongseq")
+export("putSpatstatLocatorQueue")
+export("queueSpatstatLocator")
 export("ratiotweak")
 export("relatively.prime")
 export("resolve.1.default")
