--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ export("passthrough")
 export("paste.expr")
 export("pasteFormula")
 export("pasteN")
+export("percentage")
 export("prange")
 export("prettydiscrete")
 export("prettyinside")
