New function taperoff

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -166,6 +166,7 @@ export("startinrange")
 export("strsplitretain")
 export("substringcount")
 export("sympoly")
+export("taperoff")
 export("tapplysum")
 export("termsinformula")
 export("there.is.no.try")
