New function makeCutLabels

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ export("least.common.multiple")
 export("lhs.of.formula<-")
 export("lhs.of.formula")
 export("lty2char")
+export("makeCutLabels")
 export("make.parseable")
 export("mapstrings")
 export("matchIntegerDataFrames")
