--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.utils
-Version: 1.20-0
-Date: 2021-01-04
+Version: 1.20-1
+Date: 2021-01-06
 Title: Utility Functions for 'spatstat'
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -20,7 +20,7 @@ Suggests: spatstat
 Description: Contains utility functions for the 'spatstat' package
              which may also be useful for other purposes.
 License: GPL (>= 2)
-URL: http://www.spatstat.org
+URL: http://spatstat.org
 LazyData: true
 NeedsCompilation: yes
 ByteCompile: true
