--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: spatstat.utils
-Version: 1.20-1
+Version: 1.20-2
 Date: 2021-01-06
 Title: Utility Functions for 'spatstat'
 Authors@R: c(person("Adrian", "Baddeley", 
@@ -20,7 +20,7 @@ Suggests: spatstat
 Description: Contains utility functions for the 'spatstat' package
              which may also be useful for other purposes.
 License: GPL (>= 2)
-URL: http://spatstat.org
+URL: http://spatstat.org/
 LazyData: true
 NeedsCompilation: yes
 ByteCompile: true
