Actions: Still trying...

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,6 @@ on:
 env:
   USE_BSPM: "true"
   _R_CHECK_FORCE_SUGGESTS_: "false"
-  R_VERSION: ${{ matrix.r-version }}
   COVERAGE_TYPE: "all"
 
 jobs:
@@ -18,9 +17,10 @@ jobs:
     strategy:
       matrix:
         include:
-          - {os: macOS-latest}
-          - {os: ubuntu-latest}
-          - {os: ubuntu-latest, r-version: "3.5"}
+          - os: macOS-latest
+          - os: ubuntu-latest
+          - os: ubuntu-latest
+            R_VERSION: "3.5"
 
     runs-on: ${{ matrix.os }}
 
