--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: spatstat.utils
-Version: 2.3-1
-Date: 2022-05-06
+Version: 2.3-1.001
+Date: 2022-05-24
 Title: Utility Functions for 'spatstat'
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre"),
@@ -16,7 +16,7 @@ Authors@R: c(person("Adrian", "Baddeley",
 		    comment=c(ORCID="0000-0002-6675-533X")))
 Maintainer: Adrian Baddeley <Adrian.Baddeley@curtin.edu.au>
 Depends: R (>= 3.3.0), stats, graphics, grDevices, utils, methods
-Suggests: spatstat.core
+Suggests: spatstat.model
 Description: Contains utility functions for the 'spatstat' family of packages
              which may also be useful for other purposes.
 License: GPL (>= 2)
