Extension to spatstatLocator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,6 +177,7 @@ export("sideCode")
 export("simplenumber")
 export("simplify.xypolygon")
 export("singlestring")
+export("snapxy")
 export("sortunique")
 export("spatstatLocator")
 export("splat")
